<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/main_view"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </ImageView>


    <EditText
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="255dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_adress"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:background="@drawable/input_adress">
    </EditText>

    <Button
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="330dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:background="@drawable/input_adress">
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center|left"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="38dp"
        android:textColor="@color/white">

    </TextView>

    <TextView
        android:layout_gravity="center|left"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:fontFamily="sans-serif">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:layout_gravity="center|left"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:textColor="@color/white">

    </TextView>

</FrameLayout>