<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/second_view"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/adress"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adressView"
        android:textColor="@color/white"
        android:text="XXX"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="100dp"
        android:textSize="20dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/square"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/floor"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp">

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceYourFlat"
        android:textColor="@color/white"
        android:layout_gravity="left"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp">

    </TextView>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="180dp"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_year"
        android:layout_marginRight="17dp">
    </ImageView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_month">
    </ImageView>

</LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/graphic"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
</FrameLayout>